# AlgorithmicTrading

./: CMakeLists.txt  CompileRun.sh  CompileRunConfig.sh  CompileRunTWSHistoricalData.sh  CompileRunTWSMarketData.sh  Mean-Reverting and Trending Portfolios.docx  main.cpp
Backtesting/: BacktestingOutSample.py  analysis.py
IBClient/include/: HistoricalData.h  IBClient.h  IBClientCore.h  MarketData.h  MarketDataStore.h  OrderManager.h
IBClient/source/: HistoricalData.cpp  IBClient.cpp  IBClientCore.cpp  MarketData.cpp  MarketDataStore.cpp  OrderManager.cpp
IBJts/source/cppclient/client/: CommonDefs.h  Decimal.cpp  TickType.h
IBKRTests/: CompileRunTWSMakeContract.sh  CompileRunTWSOrder.sh
IBKRTests/Config/: CMakeLists.txt  mainConfig.cpp
IBKRTests/TWSHistoricalData/: AAPL_data.csv  CMakeLists.txt  mainTWSHistoricalData.cpp
IBKRTests/TWSMakeContract/: CMakeLists.txt  mainTWSMakeContract.cpp
IBKRTests/TWSMarketData/: CMakeLists.txt  mainTWSMarketData.cpp
IBKRTests/TWSOrder/: CMakeLists.txt  mainTWSOrder.cpp
UDF/Config/include/: Config.h  ConfigContract.h  ConfigModel.h
UDF/Config/source/: ConfigModel.cpp  ConfigParams.cpp
UDF/MakeContract/include/: MakeContract.h
UDF/MakeContract/source/: MakeContract.cpp
UDF/Models/Combinatorics/include/: CombinatoricsGenerator.h
UDF/Models/Combinatorics/source/: CombinatoricsGenerator.cpp  Permutations.cpp
UDF/Models/OrnsteinUhlenbeck/include/: MaxLikelihood.h  MethodOfMoment.h  OrnsteinUhlenbeck.h
UDF/Models/Smoothing/include/: SavitzkyGolay.h
UDF/Models/TechnicalIndicator/include/: DoubleSMA.h  TechnicalIndicators.h  VarianceRatio.h
UDF/Models/TechnicalIndicator/source/: Autocovariance.cpp  VarianceRatio.cpp
UDF/Utilities/include/: Utilities.h
UDF/Utilities/source/: Utilities.cpp
UDF/config/include/: ConfigParams.h  ConfigTWS.h
UDF/config/source/: Config.cpp  ConfigContract.cpp  ConfigModel.cpp  ConfigTWS.cpp
UDF/models/Combinatorics/include/: Combinations.h  Combinatorics.h  Permutations.h
UDF/models/Combinatorics/source/: Combinations.cpp  Permutations.cpp
UDF/models/OrnsteinUhlenbeck/include/: MethodOfMoment.h  OrnsteinUhlenbeck.h
UDF/models/OrnsteinUhlenbeck/source/: MaxLikelihood.cpp  MethodOfMoment.cpp
UDF/models/Smoothing/include/: Smoothing.h
UDF/models/Smoothing/source/: SavitzkyGolay.cpp
UDF/models/TechnicalIndicator/include/: Autocovariance.h  DoubleSMA.h  HalfLife.h  HurstExponent.h  SingleSMA.h
UDF/models/TechnicalIndicator/source/: DoubleSMA.cpp  HalfLife.cpp  HurstExponent.cpp  SingleSMA.cpp
config/: configMeanRevertPortEOD.xlsx
strategy/MeanRevertingPortfolio/include/: MeanRevertingPortfolio.h
strategy/MeanRevertingPortfolio/source/: MeanRevertingPortfolio.cpp
strategy/Portfolio/include/: PortfolioSelection.h  PortfolioWeightsOH.h
strategy/Portfolio/source/: PortfolioSelection.cpp  PortfolioWeightsOH.cpp
strategy/Signals/include/: GenerateSignals.h  MeanRevertSignal.h  TrendSignal.h
strategy/Signals/source/: GenerateSignals.cpp  MeanRevertSignal.cpp  TrendSignal.cpp
strategy/data/: USEquity20250623.csv  USEquity20250624.csv  USEquity20250630.csv  USEquity20250701.csv  USEquity20250707.csv  combineData.csv  filteredHistData.csv  finalDatelist.csv  finalStockList.csv
unitTest/: CMakeLists.txt  CompileRunUnitTest.sh  testAutocovariance.cpp  testCombinations.cpp  testDoubleSMA.cpp  testHalfLife.cpp  testHurstExponent.cpp  testOHMaxLikelihood.cpp  testOHMethodOfMoment.cpp  testPermutations.cpp  testSavitzkyGolay.cpp  testSingleSMA.cpp  testVarianceRatio.cpp
